[package]
name = "procon-reconnect"
version = "0.2.0"
authors = ["= <bo20202@yandex.ru>"]
edition = "2018"

[dependencies]
winapi_bluetooth = {path = "winapi_bluetooth"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
promptly = "0.1.5"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
